--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"mode":"continuous","maxLives":10,"freezeSteps":15,"theme":"basic"}
+{"mode":"continuous","maxLives":3,"freezeSteps":5,"theme":"forest"}
